# Programovanie

./: .gitignore  CMakeLists.txt  answerchecker.cpp  main.cpp  mainmenuwidget.cpp  mainmenuwidget.h  mainwindow.cpp  sessionrepository.cpp  sessionrepository.h  settingsmanager.h
MathTrainer/: CMakeLists.txt
MathTrainer/src/: main.cpp
MathTrainer/src/data/: datamodels.h  sessionrepository.h  settingsmanager.cpp  settingsmanager.h
MathTrainer/src/logic/: answerchecker.cpp  answerchecker.h  examplegenerator.cpp  examplegenerator.h  trainingsession.cpp  trainingsession.h
MathTrainer/src/ui/: historywidget.h  mainwindow.h  resultswidget.cpp  trainingwidget.h
PasswordManager/: CMakeLists.txt  README.md
PasswordManager/src/: accountentry.h  accountfilterproxymodel.cpp  accountfilterproxymodel.h  accountrepository.cpp  accountrepository.h  accounttablemodel.cpp  accounttablemodel.h  batchchecker.cpp  batchchecker.h  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  passwordleakchecker.cpp  passwordleakchecker.h
QuickPad/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
TypingTrainer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
TypingTrainer/lessons/: bottom_row.txt  common_words_part_1.txt  common_words_part_2.txt  home_row.txt  numbers_and_symbols.txt  python_code_sample.txt  sentences.txt  simple_words.txt  starter_text.txt  top_row.txt
